syntax = "proto3";
option java_multiple_files = true;
package io.manasjain0405.grpc;

message SquareRequest {
    int32 number = 1;
};

message SquareResponse {
    int32 number = 1;
    int32 result = 2;
};

service SquareService {
    rpc squareIt(SquareRequest) returns (SquareResponse);
}

service StreamSquareService {
    rpc squareItStream(stream SquareRequest) returns (stream SquareResponse);
}
